README: update repositories' links

--- a/README.ORG
+++ b/README.ORG
@@ -47,8 +47,11 @@ Web. Here are some links:
 
 * Contact
 
-This page itself :) Feel free to open issues and send pull requests via GitHub
+This page itself :) Feel free to open issues and send pull requests via web
 interface.
+
+- [[https://codeberg.org/museoa/bqn-mode][Codeberg repo]]
+- [[https://codeberg.org/museoa/bqn-mode][GitHub mirror]]
 
 * Acknowledgements
 
